--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         mkdir build
         cd build
         cmake -D CMAKE_BUILD_TYPE=RELEASE ..
-        cmake --build . --config -j4
+        cmake --build .
         cd ..
       env:
         CC: gcc-9
@@ -36,7 +36,7 @@ jobs:
         mkdir build
         cd build
         cmake -D CMAKE_BUILD_TYPE=RELEASE ..
-        cmake --build . --config -j4
+        cmake --build .
         cd ..
       env:
         CC: clang-8
@@ -56,7 +56,7 @@ jobs:
         mkdir build
         cd build
         cmake -D CMAKE_BUILD_TYPE=RELEASE ..
-        cmake --build . --config -j4
+        cmake --build .
         cd ..
   windows-msvc-build:
     runs-on: windows-latest
