--- a/modules/task1_prime_numbers/Denisov_D/CmakeLists.txt
+++ b/modules/task1_prime_numbers/Denisov_D/CmakeLists.txt
@@ -1,4 +1,14 @@
-cmake_minimum_required(VERSION 3.21.3 FATAL_ERROR)
-project(test_cmake)
+get_filename_component(ProjectId ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 
-add_executable(check_numbers main.cpp)
+set(ProjectId "${ProjectId}")
+project( ${ProjectId} )
+message( STATUS "-- " ${ProjectId} )
+
+file(GLOB_RECURSE ALL_SOURCE_FILES *.cpp *.h)
+
+set(PACK_LIB "${ProjectId}_lib")
+add_library(${PACK_LIB} STATIC ${ALL_SOURCE_FILES} )
+
+add_executable( ${ProjectId} ${ALL_SOURCE_FILES} )
+
+target_link_libraries(${ProjectId} ${PACK_LIB})
